# taylor-challenge

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_rovers.sh  test_lidar_assembler  test_packet_structures  test_pose_receiver  test_transform
.windsurf/rules/: cpp-code-rules.md
PLAN/: design-decisions.md  phase1-opengl-todos.md  phase1-todos.md  target-tech-stack.md
PLAN/EVAL/: further-questions.md  initial-arch-questions.md
emulator/: rover_emulator.cpp  rover_profiles.h
include/: lidar_assembler.h  transform.h  udp_packet_structures.h  udp_receiver.h
src/: lidar_assembler.cpp  main.cpp  transform.cpp  udp_receiver.cpp
temp/: cpp-code-rules.md
tests/: test_lidar_assembler.cpp  test_packet_structures.cpp  test_pose_receiver.cpp  test_transform.cpp  test_udp_listener.cpp  test_udp_listener.py
